# systemd-port

./: .gitignore  README.md  libSystemd.rb  meson.build
include/arm64/asm/: bug.h  byteorder.h  processor.h  thread_info.h
include/bits/: wordsize.h
include/glibc/: features.h  stdc-predef.h
include/libudev/: libudev-device-internal.h  libudev-util.h  libudev.h
include/linux/: build_bug.h  bvec.h  compiler.h  compiler_attributes.h  compiler_types.h  err.h  highmem.h  init.h  ioctl.h  log2.h  math.h  netfilter.h  skbuff.h  stringify.h  sysinfo.h  time.h  time32.h  types.h
include/linux/asm/: bitsperlong.h  div64.h  rwonce.h  types.h
include/linux/asm-generic/: barrier.h  bug.h  preempt.h
include/linux/atomic/: atomic-instrumented.h  atomic-long.h
include/linux/byteorder/: generic.h
include/linux/vdso/: time.h  time32.h
include/x86/asm/: asm.h  barrier.h  byteorder.h  nops.h  thread_info.h
macos-homebrew/: build.sh  getent  meson.build
macos-homebrew/include/asm/: byteorder.h
macos-homebrew/include/basic/: alloc-util.h  architecture.h  arphrd-util.h  async.h  bpf_socket.h  capability-util.h  cgroup-util.h  chattr-util.h  compress.h  conf-files.h  devnum-util.h  dirent-util.h  env-file.h  env-util.h  errno-util.h  escape.h  ether-addr-util.h  extract-word.h  fd-util.h  fileio.h  format-util.h  fs-util.h  gcrypt-util.h  glob-util.h  glyph-util.h  hash-funcs.h  hashmap.h  hexdecoct.h  hostname-util.h  in-addr-util.h  inotify-util.h  io-util.h  ioprio-util.h  list.h  locale-util.h  log.h  macos_file_handle.h  macro.h  math-util.h  memory-util.h  (+52 more)
macos-homebrew/include/compat/: auxv.h  byteswap.h  capability.h  compat-glibc.h  compat_arphrd_from_name.h  compat_arphrd_to_name.h  compat_audit.h  compat_endian.h  compat_general.h  compat_macro.h  compat_malloc.h  compat_nfnetlink_compat.h  compat_types.h  copy_file_range.h  errno.h  getdents64.h  gettid.h  ioprio.h  linux_const.h  linux_if_infiniband.h  memfd.h  pivot_root.h  renameat2.h  sched_setattr.h  threads.h  time_types.h  vm_sockets.h
macos-homebrew/include/fundamental/: efivars-fundamental.h  macro-fundamental.h
macos-homebrew/include/linux/: README  audit.h  auto_dev-ioctl.h  blkpg.h  bpf.h  btrfs.h  capability.h  config.h  const.h  dm-ioctl.h  ethtool.h  falloc.h  filter.h  fs.h  if.h  if_addrlabel.h  if_arp.h  if_ether.h  if_link.h  if_packet.h  in.h  in6.h  ip.h  kd.h  keyctl.h  loop.h  magic.h  memfd.h  missing_magic.h  mqueue.h  mqueue_shm.h  neighbour.h  netfilter_ipv4.h  netlink.h  oom.h  prctl.h  random.h  rtc.h  rtnetlink.h  securebits.h  (+7 more)
macos-homebrew/include/shared/: acl-util.h  ask-password-api.h  barrier.h  binfmt-util.h  bitmap.h  blockdev-util.h  bond-util.h  bootspec.h  bpf-link.h  bpf-program.h  btrfs-util.h  bus-get-properties.h  bus-print-properties.h  bus-util.h  bus-wait-for-jobs.h  bus-wait-for-units.h  clock-util.h  compare-operator.h  condition.h  conf-parser.h  coredump-util.h  cpu-set-util.h  cryptsetup-util.h  daemon-util.h  discover-image.h  dissect-image.h  dlfcn-util.h  dns-domain.h  dropin.h  exit-status.h  fdisk-util.h  fdset.h  fileio-label.h  format-table.h  fstab-util.h  generator.h  gshadow.h  import-util.h  install.h  ipvlan-util.h  (+34 more)
macos-homebrew/include/sys_compat/: capability.h  compat_arphrd_to_name.h  cpu-set.h  elf-shim.h  endian.h  epoll.h  errno.h  eventfd.h  glibc.h  inotify.h  limits.h  malloc.h  memrchr.h  missing_syscall.h  personality.h  pipe.h  ppoll.h  prctl.h  sdt.h  sgrp.h  signal.h  signalfd.h  sockets.h  statfs.h  stdio_ext.h  syncfs.h  timerfd.h  ucred.h  vfs.h  xattr.h
macos-homebrew/include/systemd/: sd-daemon.h  sd-device.h  sd-dhcp-lease.h  sd-event.h  sd-lldp-rx.h  sd-lldp-tx.h  sd-ndisc.h  sd-netlink.h  sd-path.h
macos-homebrew/include/udev/: libudev-list-internal.h  libudev-util.h
macos-homebrew/include/valgrind/: memcheck.h  valgrind.h
macos-homebrew/src/: meson.build
macos-homebrew/src/basic/: af-list.c  alloc-util.c  architecture.c  arphrd-util.c  async.c  audit-util.c  bpf_socket.c  bus-label.c  cap-list.c  capability-util.c  cgroup-util.c  chattr-util.c  compress.c  conf-files.c  efivars.c  env-file.c  env-util.c  errno-list.c  errno-to-name.awk  escape.c  ether-addr-util.c  extract-word.c  fd-util.c  fileio.c  filesystems-gperf.gperf  filesystems.c  fs-util.c  generate-af-list.sh  generate-arphrd-list.sh  generate-cap-list.sh  generate-errno-list.sh  generate-filesystem-switch-case.py  glob-util.c  hashmap.c  hexdecoct.c  hostname-util.c  in-addr-util.c  io-util.c  locale-util.c  log.c  (+41 more)
macos-homebrew/src/fundamental/: meson.build
macos-homebrew/src/libsystemd/: libsystemd.sym  meson.build
macos-homebrew/src/libudev/: libudev-device.c  libudev-enumerate.c  libudev-hwdb.c  libudev-list.c  libudev-monitor.c  libudev-queue.c  meson.build  test-libudev.c  test-udev-device-thread.c
macos-homebrew/src/linux/: meson.build  mqueue.c  mqueue_notify.c  system_call.c
macos-homebrew/src/shared/: acl-util.c  acpi-fpdt.c  ask-password-api.c  barrier.c  base-filesystem.c  binfmt-util.c  bitmap.c  blockdev-util.c  bootspec.c  bpf-program.c  btrfs-util.c  bus-log-control-api.c  bus-print-properties.c  bus-unit-procs.c  bus-unit-util.c  bus-util.c  calendarspec.c  cgroup-setup.c  cgroup-show.c  chown-recursive.c  clean-ipc.c  clock-util.c  condition.c  conf-parser.c  copy.c  cpu-set-util.c  creds-util.c  data-fd-util.c  dev-setup.c  device-nodes.c  devnode-acl.c  discover-image.c  dissect-image.c  dlfcn-util.c  dns-domain.c  dropin.c  elf-util.c  exec-util.c  fdset.c  find-esp.c  (+67 more)
macos-homebrew/tools/: debug-sd-boot.sh  find-build-dir.sh
scripts/: build.cmd
src/: meson.build
src/linux/: init.c  meson.build
standalone - inprogress/: meson.build
standalone - inprogress/backup.vscode/: c_cpp_properties.json  launch.json  settings.json
standalone - inprogress/include/bits/: timesize.h
standalone - inprogress/include/glibc/: features-time64.h
standalone - inprogress/scripts/: build.sh
standalone - inprogress/src/linux/: meson.build  netfilter.c
tests/linux/: meson.build  test_init.c
(+137 files in other folders)
